Added checkout page and integrate stripe for transaction

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "pluralize": "^8.0.0",
+    "stripe": "^17.7.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
