--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^5.52.1",
-    "@clerk/nextjs": "^6.11.1",
+    "@clerk/clerk-js": "^5.54.2",
+    "@clerk/nextjs": "^6.12.2",
     "@clerk/themes": "^2.2.16",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.10.0",
@@ -28,7 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.54.2",
+    "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
