--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pluralize": "^8.0.0",
     "stripe": "^17.7.0",
     "uuid": "^11.0.5"
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/pluralize": "^0.0.33",
     "@types/uuid": "^10.0.0",
