--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pluralize": "^8.0.0",
+    "serverless-http": "^3.2.0",
     "stripe": "^17.7.0",
     "uuid": "^11.0.5"
   },
